--- a/packages/cli/src/commands/generate/cell/templates/mockList.ts.template
+++ b/packages/cli/src/commands/generate/cell/templates/mockList.ts.template
@@ -2,13 +2,13 @@
 export const standard = (/* vars, { ctx, req } */) => ({
   ${camelName}: [
     {
-      __typename: "${singularPascalName}",
+      __typename: "${typeName}" as const,
       ${idName}: ${mockIdValues[0]} },
     {
-      __typename: "${singularPascalName}",
+      __typename: "${typeName}" as const,
       ${idName}: ${mockIdValues[1]} },
     {
-      __typename: "${singularPascalName}",
+      __typename: "${typeName}" as const,
       ${idName}: ${mockIdValues[2]} }
     ]
   })
