--- a/packages/prerender/package.json
+++ b/packages/prerender/package.json
@@ -62,8 +62,8 @@
     "vitest": "2.0.5"
   },
   "peerDependencies": {
-    "react": "19.0.0-rc-8269d55d-20240802",
-    "react-dom": "19.0.0-rc-8269d55d-20240802"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "externals": {
     "react": "react",
