--- a/packages/auth-providers/firebase/web/package.json
+++ b/packages/auth-providers/firebase/web/package.json
@@ -34,7 +34,7 @@
     "firebase": "10.12.4",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "react": "19.0.0-beta-04b058868c-20240508",
+    "react": "18.3.1",
     "typescript": "5.5.4"
   },
   "peerDependencies": {
