--- a/packages/ogimage-gen/package.json
+++ b/packages/ogimage-gen/package.json
@@ -44,8 +44,8 @@
     "@redwoodjs/web": "workspace:*",
     "fast-glob": "3.3.2",
     "lodash": "4.17.21",
-    "react": "19.0.0-beta-04b058868c-20240508",
-    "react-dom": "19.0.0-beta-04b058868c-20240508"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@playwright/test": "1.45.3",
