--- a/packages/prerender/package.json
+++ b/packages/prerender/package.json
@@ -46,8 +46,8 @@
     "vitest": "2.0.4"
   },
   "peerDependencies": {
-    "react": "19.0.0-beta-04b058868c-20240508",
-    "react-dom": "19.0.0-beta-04b058868c-20240508"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "externals": {
     "react": "react",
