--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -87,7 +87,7 @@
     "fs-extra": "11.2.0",
     "http-proxy-middleware": "3.0.0",
     "isbot": "5.1.13",
-    "react": "19.0.0-beta-04b058868c-20240508",
+    "react": "18.3.1",
     "react-server-dom-webpack": "19.0.0-beta-04b058868c-20240508",
     "rimraf": "6.0.1",
     "vite": "5.3.5",
