Update deps, switch to vitest

--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -21,19 +21,17 @@
     "build:types": "tsc --build --verbose",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "prepublishOnly": "NODE_ENV=production yarn build",
-    "test": "jest src",
+    "test": "vitest run",
     "test:watch": "yarn test --watch"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "7.24.5",
-    "core-js": "3.37.1",
     "fast-glob": "3.3.2"
   },
   "devDependencies": {
     "@redwoodjs/project-config": "workspace:*",
-    "jest": "29.7.0",
     "tsx": "4.15.6",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "vitest": "1.6.0"
   },
   "gitHead": "3905ed045508b861b495f8d5630d76c7a157d8f1"
 }
