--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -94,6 +94,7 @@
     "react-server-dom-webpack": "19.0.0-beta-04b058868c-20240508",
     "vite": "5.3.1",
     "vite-plugin-cjs-interop": "2.1.1",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "yargs-parser": "21.1.1"
   },
   "devDependencies": {
