chore(esm): Update storybook build and package.json to build dual package

--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -21,20 +21,23 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "node": "./dist/index.js",
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/index.js"
     },
     "./preset": {
       "types": "./dist/preset.d.ts",
-      "require": "./dist/preset.js"
+      "require": "./dist/cjs/preset.js",
+      "import": "./dist/preset.js"
     },
-    "./dist/mocks/MockRouter": "./dist/mocks/MockRouter.js",
+    "./dist/mocks/MockRouter": {
+      "require": "./dist/cjs/mocks/MockRouter.js",
+      "import": "./dist/mocks/MockRouter.js"
+    },
     "./dist/preview.js": "./dist/preview.js",
     "./package.json": "./package.json"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "dist/cjs/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/**/*",
