RSC: Make `rw g page` work for RSC projects

--- a/packages/cli/src/commands/generate/page/templates/page.tsx.template
+++ b/packages/cli/src/commands/generate/page/templates/page.tsx.template
@@ -1,5 +1,12 @@
+<% if (rscEnabled) { %>
+import { Link } from '@redwoodjs/router/dist/link'
+import { namedRoutes as routes } from '@redwoodjs/router/dist/namedRoutes'
+import { Metadata } from '@redwoodjs/web/dist/components/Metadata'
+<% } else { %>
 import { Link, routes } from '@redwoodjs/router'
 import { Metadata } from '@redwoodjs/web'
+<% } %>
+
 <% if (paramName !== '') { %>
 type ${pascalName}PageProps = {
   ${paramName}: ${paramType}
