--- a/packages/cli/src/commands/experimental/templates/rsc/Routes.tsx.template
+++ b/packages/cli/src/commands/experimental/templates/rsc/Routes.tsx.template
@@ -16,9 +16,9 @@ import { Router } from '@redwoodjs/vite/Router'
 import NavigationLayout from 'src/layouts/NavigationLayout'
 import NotFoundPage from 'src/pages/NotFoundPage'
 
-const Routes = ({ location }: { location?: any }) => {
+const Routes = () => {
   return (
-    <Router location={location}>
+    <Router>
       <Set wrap={NavigationLayout}>
         <Route path="/" page={HomePage} name="home" />
         <Route path="/about" page={AboutPage} name="about" />
