--- a/packages/ogimage-gen/package.json
+++ b/packages/ogimage-gen/package.json
@@ -41,7 +41,7 @@
     "@redwoodjs/internal": "workspace:*",
     "@redwoodjs/project-config": "workspace:*",
     "@redwoodjs/router": "workspace:*",
-    "@redwoodjs/vite": "workspace:*",
+    "@redwoodjs/web": "workspace:*",
     "fast-glob": "3.3.2",
     "lodash": "4.17.21",
     "react": "19.0.0-beta-04b058868c-20240508",
