--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -7,6 +7,17 @@
     "moduleResolution": "NodeNext",
     "module": "NodeNext",
   },
-  "include": ["./src/**/*", "ambient.d.ts", "testing-library.d.ts"],
-  "references": [{ "path": "../auth/tsconfig.build.json" }]
+  "include": [
+    "./src/**/*",
+    "ambient.d.ts",
+    "testing-library.d.ts"
+  ],
+  "references": [
+    {
+      "path": "../auth/tsconfig.build.json"
+    },
+    {
+      "path": "../internal"
+    }
+  ]
 }
