Debug publish canary script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,11 @@ jobs:
         id: detect-changes
         uses: ./.github/actions/detect-changes
 
+      - name: 🚢 Publish debug
+        run: ./.github/scripts/publish_canary.sh
+        # env:
+          # NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
   check:
     needs: detect-changes
     if: needs.detect-changes.outputs.code == 'true'
