--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -19,8 +19,8 @@
     "@redwoodjs/eslint-plugin": "workspace:*",
     "@redwoodjs/internal": "workspace:*",
     "@redwoodjs/project-config": "workspace:*",
-    "@typescript-eslint/eslint-plugin": "rc-v8",
-    "@typescript-eslint/parser": "rc-v8",
+    "@typescript-eslint/eslint-plugin": "7.3.1",
+    "@typescript-eslint/parser": "7.3.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-babel-module": "5.3.2",
