--- a/packages/cli-helpers/package.json
+++ b/packages/cli-helpers/package.json
@@ -9,9 +9,16 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    "types": "./dist/index.d.ts",
-    "import": "./dist/index.mjs",
-    "default": "./dist/index.cjs"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "default": "./dist/index.cjs"
+    },
+    "./loadEnvFiles": {
+      "types": "./dist/src/loadEnvFiles.d.ts",
+      "import": "./dist/src/loadEnvFiles.mjs",
+      "default": "./dist/src/loadEnvFiles.cjs"
+    }
   },
   "types": "./dist/index.d.ts",
   "files": [
@@ -33,6 +40,7 @@
     "@redwoodjs/telemetry": "workspace:*",
     "chalk": "4.1.2",
     "dotenv": "16.4.5",
+    "dotenv-defaults": "5.0.2",
     "execa": "5.1.1",
     "listr2": "6.6.1",
     "lodash": "4.17.21",
@@ -43,6 +51,7 @@
     "terminal-link": "2.1.1"
   },
   "devDependencies": {
+    "@types/dotenv-defaults": "^2.0.4",
     "@types/lodash": "4.17.5",
     "@types/pascalcase": "1.0.3",
     "@types/yargs": "17.0.32",
