Add watcher for changes.

--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -48,6 +48,7 @@
   },
   "bin": {
     "rw-dev-fe": "./dist/devFeServer.js",
+    "rw-dev-rsc": "./dist/devRscServer.js",
     "rw-serve-fe": "./dist/runFeServer.js",
     "rw-vite-build": "./bins/rw-vite-build.mjs",
     "rw-vite-dev": "./bins/rw-vite-dev.mjs",
@@ -83,15 +84,18 @@
     "acorn-loose": "8.4.0",
     "buffer": "6.0.3",
     "busboy": "^1.6.0",
+    "chokidar": "3.6.0",
     "cookie": "0.6.0",
     "core-js": "3.37.1",
     "dotenv-defaults": "5.0.2",
+    "execa": "9.3.0",
     "express": "4.19.2",
     "find-my-way": "8.2.0",
     "http-proxy-middleware": "2.0.6",
     "isbot": "5.1.9",
     "react": "19.0.0-beta-04b058868c-20240508",
     "react-server-dom-webpack": "19.0.0-beta-04b058868c-20240508",
+    "rimraf": "5.0.7",
     "vite": "5.3.1",
     "vite-plugin-cjs-interop": "2.1.1",
     "vite-plugin-node-polyfills": "^0.22.0",
