--- a/packages/cli-helpers/tsconfig.build.json
+++ b/packages/cli-helpers/tsconfig.build.json
@@ -9,6 +9,7 @@
   },
   "include": ["src"],
   "references": [
+    { "path": "../framework-tools" },
     { "path": "../telemetry" },
     { "path": "../project-config" }
   ],
