--- a/packages/cli-helpers/package.json
+++ b/packages/cli-helpers/package.json
@@ -10,8 +10,8 @@
   "type": "module",
   "exports": {
     "types": "./dist/index.d.ts",
-    "import": "./dist/index.mjs",
-    "default": "./dist/index.cjs"
+    "import": "./dist/index.js",
+    "default": "./dist/cjs/index.js"
   },
   "types": "./dist/index.d.ts",
   "files": [
@@ -43,6 +43,7 @@
     "terminal-link": "2.1.1"
   },
   "devDependencies": {
+    "@redwoodjs/framework-tools": "workspace:*",
     "@types/lodash": "4.17.5",
     "@types/pascalcase": "1.0.3",
     "@types/yargs": "17.0.32",
