--- a/packages/cli-helpers/package.json
+++ b/packages/cli-helpers/package.json
@@ -9,9 +9,16 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    "types": "./dist/index.d.ts",
-    "import": "./dist/index.js",
-    "default": "./dist/cjs/index.js"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/cjs/index.js"
+    },
+    "./loadEnvFiles": {
+      "types": "./dist/lib/loadEnvFiles.d.ts",
+      "import": "./dist/lib/loadEnvFiles.js",
+      "default": "./dist/cjs/lib/loadEnvFiles.js"
+    }
   },
   "types": "./dist/index.d.ts",
   "files": [
@@ -44,9 +51,11 @@
   },
   "devDependencies": {
     "@redwoodjs/framework-tools": "workspace:*",
+    "@types/dotenv-defaults": "^2.0.4",
     "@types/lodash": "4.17.5",
     "@types/pascalcase": "1.0.3",
     "@types/yargs": "17.0.32",
+    "dotenv-defaults": "5.0.2",
     "tsx": "4.15.6",
     "typescript": "5.4.5",
     "vitest": "1.6.0"
