--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,35 +22,29 @@
   },
   "exports": {
     ".": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      },
-      "require": {
-        "types": "./dist/cjs/index.d.ts",
-        "default": "./dist/cjs/index.js"
-      }
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/cjs/index.js"
     },
     "./serverInject": {
-      "require": "./dist/cjs/components/ServerInject.js",
-      "import": "./dist/components/ServerInject.js",
       "types": "./dist/components/ServerInject.d.ts",
-      "default": "./dist/components/ServerInject.js"
+      "import": "./dist/components/ServerInject.js",
+      "default": "./dist/cjs/components/ServerInject.js"
     },
     "./request": {
-      "require": "./dist/cjs/server/request.js",
+      "types": "./dist/server/request.d.ts",
       "import": "./dist/server/request.js",
-      "types": "./dist/server/request.d.ts"
+      "default": "./dist/cjs/server/request.js"
     },
     "./middleware": {
-      "require": "./dist/cjs/server/middleware.js",
+      "types": "./dist/server/middleware.d.ts",
       "import": "./dist/server/middleware.js",
-      "types": "./dist/server/middleware.d.ts"
+      "default": "./dist/cjs/server/middleware.js"
     },
     "./dist/server/middleware.js": {
-      "require": "./dist/cjs/server/middleware.js",
+      "types": "./dist/server/middleware.d.ts",
       "import": "./dist/server/middleware.js",
-      "types": "./dist/server/middleware.d.ts"
+      "default": "./dist/cjs/server/middleware.js"
     },
     "./dist/components/*": {
       "require": "./dist/cjs/components/*.js",
@@ -76,14 +70,13 @@
       "default": "./dist/entry/index.js"
     },
     "./toast": {
-      "require": "./dist/cjs/toast/index.js",
+      "types": "./dist/toast/index.d.ts",
       "import": "./dist/toast/index.js",
-      "types": "./dist/toast/index.d.ts"
+      "default": "./dist/cjs/toast/index.js"
     },
     "./apollo": {
-      "require": "./dist/cjs/apollo/index.js",
-      "import": "./dist/apollo/index.js",
       "types": "./dist/apollo/index.d.ts",
+      "import": "./dist/apollo/index.js",
       "default": "./dist/cjs/apollo/index.js"
     },
     "./forceEsmApollo": {
