chore(web): publint and attw

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -13,11 +13,6 @@
     "testing-library.d.ts"
   ],
   "references": [
-    {
-      "path": "../auth/tsconfig.build.json"
-    },
-    {
-      "path": "../internal"
-    }
+    { "path": "../internal" }
   ]
 }
