--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,30 +22,54 @@
   },
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/cjs/index.js"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/cjs/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      }
     },
     "./serverInject": {
-      "types": "./dist/components/ServerInject.d.ts",
-      "import": "./dist/components/ServerInject.js",
-      "default": "./dist/cjs/components/ServerInject.js"
+      "import": {
+        "types": "./dist/components/ServerInject.d.ts",
+        "default": "./dist/components/ServerInject.js"
+      },
+      "require": {
+        "types": "./dist/cjs/components/ServerInject.d.ts",
+        "default": "./dist/cjs/components/ServerInject.js"
+      }
     },
     "./request": {
-      "types": "./dist/server/request.d.ts",
-      "import": "./dist/server/request.js",
-      "default": "./dist/cjs/server/request.js"
+      "import": {
+        "types": "./dist/server/request.d.ts",
+        "default": "./dist/server/request.js"
+      },
+      "require": {
+        "types": "./dist/cjs/server/request.d.ts",
+        "default": "./dist/cjs/server/request.js"
+      }
     },
     "./middleware": {
-      "types": "./dist/server/middleware.d.ts",
-      "import": "./dist/server/middleware.js",
-      "default": "./dist/cjs/server/middleware.js"
+      "import": {
+        "types": "./dist/server/middleware.d.ts",
+        "default": "./dist/server/middleware.js"
+      },
+      "require": {
+        "types": "./dist/cjs/server/middleware.d.ts",
+        "default": "./dist/cjs/server/middleware.js"
+      }
     },
     "./dist/server/middleware": {
-      "require": "./dist/cjs/server/middleware.js",
-      "types": "./dist/server/middleware.d.ts",
-      "import": "./dist/server/middleware.js",
-      "default": "./dist/cjs/server/middleware.js"
+      "import": {
+        "types": "./dist/server/middleware.d.ts",
+        "default": "./dist/server/middleware.js"
+      },
+      "require": {
+        "types": "./dist/cjs/server/middleware.d.ts",
+        "default": "./dist/cjs/server/middleware.js"
+      }
     },
     "./dist/components/*": {
       "require": "./dist/cjs/components/*.js",
@@ -71,14 +95,24 @@
       "default": "./dist/entry/index.js"
     },
     "./toast": {
-      "types": "./dist/toast/index.d.ts",
-      "import": "./dist/toast/index.js",
-      "default": "./dist/cjs/toast/index.js"
+      "import": {
+        "types": "./dist/toast/index.d.ts",
+        "default": "./dist/toast/index.js"
+      },
+      "require": {
+        "types": "./dist/cjs/toast/index.d.ts",
+        "default": "./dist/cjs/toast/index.js"
+      }
     },
     "./apollo": {
-      "types": "./dist/apollo/index.d.ts",
-      "import": "./dist/apollo/index.js",
-      "default": "./dist/cjs/apollo/index.js"
+      "import": {
+        "types": "./dist/apollo/index.d.ts",
+        "default": "./dist/apollo/index.js"
+      },
+      "require": {
+        "types": "./dist/cjs/apollo/index.d.ts",
+        "default": "./dist/cjs/apollo/index.js"
+      }
     },
     "./forceEsmApollo": {
       "require": "./dist/apollo/index.js",
@@ -92,12 +126,15 @@
     "src/entry"
   ],
   "scripts": {
-    "build": "tsx ./build.mts && yarn build:types",
+    "build": "tsx ./build.ts && yarn build:types",
     "build:pack": "yarn pack -o redwoodjs-web.tgz",
     "build:types": "tsc --build --verbose ./tsconfig.json ./tsconfig.types-cjs.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "prepublishOnly": "NODE_ENV=production yarn build",
-    "test": "vitest run",
+    "test": "concurrently npm:test:vitest npm:test:attw npm:test:publint",
+    "test:vitest": "vitest run",
+    "test:attw": "tsx ./attw.ts",
+    "test:publint": "yarn publint",
     "test:types": "tstyche",
     "test:watch": "vitest watch"
   },
@@ -118,6 +155,7 @@
   },
   "devDependencies": {
     "@apollo/client-react-streaming": "0.10.0",
+    "@arethetypeswrong/cli": "0.15.3",
     "@babel/cli": "7.24.5",
     "@babel/core": "^7.22.20",
     "@babel/plugin-transform-runtime": "7.24.3",
@@ -129,7 +167,9 @@
     "@testing-library/react": "14.3.1",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "concurrently": "8.2.2",
     "nodemon": "3.1.3",
+    "publint": "0.2.8",
     "react": "19.0.0-beta-04b058868c-20240508",
     "react-dom": "19.0.0-beta-04b058868c-20240508",
     "tstyche": "2.0.0",
