--- a/packages/vite/tsconfig.json
+++ b/packages/vite/tsconfig.json
@@ -11,6 +11,6 @@
     { "path": "../project-config" },
     { "path": "../router" },
     { "path": "../server-store" },
-    { "path": "../web" }
+    { "path": "../web/tsconfig.build.json" }
   ]
 }
