--- a/packages/web/tsconfig.types-cjs.json
+++ b/packages/web/tsconfig.types-cjs.json
@@ -1,8 +1,8 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.build.json",
   "compilerOptions": {
     "outDir": "dist/cjs",
     "module": "commonjs",
-    "moduleResolution": "node",
-  },
+    "moduleResolution": "node"
+  }
 }
