chore(apollo client): Add types for cjs imports

--- a/packages/web/tsconfig.build.json
+++ b/packages/web/tsconfig.build.json
@@ -5,11 +5,12 @@
     "outDir": "dist",
     "esModuleInterop": true,
     "moduleResolution": "NodeNext",
-    "module": "NodeNext",
+    "module": "NodeNext"
   },
   "include": [
     "./src/**/*",
     "ambient.d.ts",
+    "modules.d.ts",
     "testing-library.d.ts"
   ],
   "references": [
