--- a/packages/auth/tsconfig.types-cjs.json
+++ b/packages/auth/tsconfig.types-cjs.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    "outDir": "dist/cjs"
+    "outDir": "dist/cjs",
+    "tsBuildInfoFile": "./tsconfig.types-cjs.tsbuildinfo"
   }
 }
