--- a/packages/project-config/tsconfig.types-cjs.json
+++ b/packages/project-config/tsconfig.types-cjs.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist/cjs",
+    "tsBuildInfoFile": "tsconfig.types-cjs.tsbuildinfo",
     "module": "commonjs",
-    "moduleResolution": "node",
-  },
+    "moduleResolution": "node"
+  }
 }
