--- a/packages/web/tsconfig.types-cjs.json
+++ b/packages/web/tsconfig.types-cjs.json
@@ -2,7 +2,6 @@
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
     "outDir": "dist/cjs",
-    "module": "commonjs",
-    "moduleResolution": "node"
+    "tsBuildInfoFile": "tsconfig.types-cjs.tsbuildinfo"
   }
 }
