--- a/packages/auth-providers/dbAuth/middleware/package.json
+++ b/packages/auth-providers/dbAuth/middleware/package.json
@@ -28,9 +28,11 @@
   "scripts": {
     "build": "tsx ./build.mts && yarn build:types",
     "build:pack": "yarn pack -o redwoodjs-auth-dbauth-middleware.tgz",
-    "build:types": "tsc --build --verbose ./tsconfig.json ./tsconfig.types-cjs.json",
+    "build:types": "tsc --build --verbose ./tsconfig.json",
     "prepublishOnly": "NODE_ENV=production yarn build",
     "test": "vitest run",
+    "test:attw": "yarn attw -P",
+    "test:publint": "yarn publint",
     "test:watch": "vitest watch"
   },
   "dependencies": {
@@ -44,6 +46,8 @@
     "@types/aws-lambda": "8.10.138",
     "ts-toolbelt": "9.6.0",
     "tsx": "4.15.6",
+    "@arethetypeswrong/cli": "0.15.3",
+    "publint": "0.2.8",
     "typescript": "5.4.5",
     "vitest": "1.6.0"
   },
