--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -39,6 +39,7 @@
       "import": "./dist/SsrRouter.js"
     },
     "./buildFeServer": {
+      "require": "./dist/cjs/buildFeServer.js",
       "import": "./dist/buildFeServer.js"
     },
     "./react-node-loader": {
@@ -63,7 +64,7 @@
     "build:types": "tsc --build --verbose ./tsconfig.json",
     "test:attw": "tsx ./attw.ts",
     "test:publint": "yarn publint",
-    "test": "vitest run",
+    "test": "concurrently npm:test:vitest npm:test:attw npm:test:publint",
     "test:watch": "vitest watch"
   },
   "dependencies": {
@@ -106,6 +107,7 @@
     "@types/express": "4",
     "@types/react": "^18.2.55",
     "@types/yargs-parser": "21.0.3",
+    "concurrently": "8.2.2",
     "glob": "10.3.15",
     "publint": "0.2.8",
     "rollup": "4.18.0",
