--- a/packages/auth-providers/supabase/middleware/package.json
+++ b/packages/auth-providers/supabase/middleware/package.json
@@ -33,6 +33,7 @@
     "build:types-cjs": "tsc --build --verbose tsconfig.types-cjs.json",
     "test:attw": "yarn attw -P",
     "test:publint": "yarn publint",
+    "test:vitest": "vitest run",
     "prepublishOnly": "NODE_ENV=production yarn build",
     "test": "concurrently npm:test:vitest npm:test:attw npm:test:publint",
     "test:watch": "vitest watch"
