chore(supabase-mw): Convert supabase-mw to dual package (#10954)

--- a/packages/auth-providers/supabase/middleware/package.json
+++ b/packages/auth-providers/supabase/middleware/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@redwoodjs/auth-supabase-middleware",
   "version": "7.0.0",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/redwoodjs/redwood.git",
@@ -9,11 +10,14 @@
   "license": "MIT",
   "exports": {
     ".": {
-      "default": "./dist/index.js"
-    },
-    "./plugin": {
-      "import": "./dist/vite-plugin-auth-supabase-middleware.js",
-      "default": "./cjsWrappers/plugin.js"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/cjs/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      }
     }
   },
   "main": "./dist/index.js",
@@ -26,8 +30,12 @@
     "build": "tsx ./build.mts && yarn build:types",
     "build:pack": "yarn pack -o redwoodjs-auth-supabase-middleware.tgz",
     "build:types": "tsc --build --verbose",
+    "build:types-cjs": "tsc --build --verbose tsconfig.types-cjs.json",
+    "test:attw": "yarn attw -P",
+    "test:publint": "yarn publint",
+    "test:vitest": "vitest run",
     "prepublishOnly": "NODE_ENV=production yarn build",
-    "test": "vitest run",
+    "test": "concurrently npm:test:vitest npm:test:attw npm:test:publint",
     "test:watch": "vitest watch"
   },
   "dependencies": {
@@ -36,11 +44,14 @@
     "@supabase/ssr": "0.3.0"
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "0.15.3",
     "@redwoodjs/api": "workspace:*",
     "@redwoodjs/auth": "workspace:*",
     "@redwoodjs/framework-tools": "workspace:*",
     "@redwoodjs/graphql-server": "workspace:*",
     "@types/aws-lambda": "8.10.138",
+    "concurrently": "8.2.2",
+    "publint": "0.2.8",
     "ts-toolbelt": "9.6.0",
     "tsx": "4.15.6",
     "typescript": "5.4.5",
