--- a/packages/auth-providers/dbAuth/middleware/tsconfig.types-cjs.json
+++ b/packages/auth-providers/dbAuth/middleware/tsconfig.types-cjs.json
@@ -2,5 +2,6 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist/cjs",
-  },
+    "tsBuildInfoFile": "./tsconfig.types-cjs.tsbuildinfo"
+  }
 }
