--- a/packages/router/tsconfig.json
+++ b/packages/router/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext"
   },
   "include": ["src", "./ambient.d.ts"],
   "references": [
