make fs-extra happy in test

--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -90,6 +90,7 @@
     "dotenv-defaults": "5.0.2",
     "express": "4.19.2",
     "find-my-way": "8.2.0",
+    "fs-extra": "11.2.0",
     "http-proxy-middleware": "2.0.6",
     "isbot": "5.1.9",
     "react": "19.0.0-beta-04b058868c-20240508",
@@ -105,6 +106,7 @@
     "@types/busboy": "^1",
     "@types/cookie": "^0",
     "@types/express": "4",
+    "@types/fs-extra": "11.0.4",
     "@types/react": "^18.2.55",
     "@types/yargs-parser": "21.0.3",
     "concurrently": "8.2.2",
