restore build exports field

--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -45,6 +45,10 @@
     "./react-node-loader": {
       "default": "./dist/react-server-dom-webpack/node-loader.js"
     },
+    "./build": {
+      "types": "./dist/build/build.d.ts",
+      "default": "./dist/build/build.js"
+    },
     "./bins/rw-vite-build.mjs": "./bins/rw-vite-build.mjs"
   },
   "bin": {
