Add dist/* for prerender and MockRouter package

--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -73,9 +73,9 @@
       "import": "./dist/server-router.js",
       "require": "./dist/cjs/server-router.js"
     },
-    "./dist/dummyComponent": {
-      "import": "./dist/dummyComponent.js",
-      "require": "./dist/cjs/dummyComponent.js"
+    "./dist/*": {
+      "require": "./dist/cjs/*.js",
+      "import": "./dist/*.js"
     }
   },
   "scripts": {
