Update paths where RscRouter is imported from in fixtures

--- a/packages/cli/src/commands/experimental/templates/rsc/Routes.tsx.template
+++ b/packages/cli/src/commands/experimental/templates/rsc/Routes.tsx.template
@@ -7,11 +7,10 @@
 // 'src/pages/HomePage/HomePage.js'         -> HomePage
 // 'src/pages/Admin/BooksPage/BooksPage.js' -> AdminBooksPage
 
-import { Route } from '@redwoodjs/router/dist/Route'
-import { Set } from '@redwoodjs/router/dist/Set'
-// @ts-expect-error - ESM issue. RW projects need to be ESM to properly pick up
-// on the types here
-import { Router } from '@redwoodjs/vite/Router'
+import { Route } from '@redwoodjs/router/Route'
+import { Set } from '@redwoodjs/router/Set'
+
+import { Router } from '@redwoodjs/router/RscRouter'
 
 import NavigationLayout from 'src/layouts/NavigationLayout'
 import NotFoundPage from 'src/pages/NotFoundPage'
