--- a/packages/vite/tsconfig.json
+++ b/packages/vite/tsconfig.json
@@ -6,13 +6,29 @@
     "moduleResolution": "NodeNext",
     "module": "NodeNext",
   },
-  "include": ["src/**/*", "./ambient.d.ts", "./modules.d.ts"],
+  "include": [
+    "src/**/*",
+    "./ambient.d.ts",
+    "./modules.d.ts",
+  ],
   "references": [
-    { "path": "../cookie-jar" },
-    { "path": "../internal" },
-    { "path": "../project-config" },
-    { "path": "../router" },
-    { "path": "../server-store" },
-    { "path": "../web/tsconfig.build.json" }
+    {
+      "path": "../cookie-jar"
+    },
+    {
+      "path": "../internal"
+    },
+    {
+      "path": "../project-config"
+    },
+    {
+      "path": "../router"
+    },
+    {
+      "path": "../server-store"
+    },
+    {
+      "path": "../web/tsconfig.build.json"
+    }
   ]
 }
