--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
+    "chalk": "5.3.0",
     "enquirer": "2.4.1",
     "execa": "9.3.0",
     "listr2": "8.2.3",
