Rename to create-redwood-rsc-app

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -36,7 +36,7 @@
     "README.md"
   ],
   "imageSize": 100,
-  "projectName": "create-rw-rsc-app",
+  "projectName": "create-redwood-rsc-app",
   "projectOwner": "Tobbe",
   "repoHost": "https://github.com",
   "repoType": "github"
