chore(esm/cjs): Make the router package dual & move RSC router (#10957)

--- a/packages/router/tsconfig.json
+++ b/packages/router/tsconfig.json
@@ -3,10 +3,20 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext"
   },
-  "include": ["src", "./ambient.d.ts"],
+  "include": [
+    "src",
+    "./ambient.d.ts",
+    "./rsdw.modules.d.ts"
+  ],
   "references": [
-    { "path": "../auth/tsconfig.build.json" },
-    { "path": "../server-store" },
+    {
+      "path": "../auth/tsconfig.build.json"
+    },
+    {
+      "path": "../server-store"
+    },
   ]
 }
