Forgot the Link import

--- a/packages/cli/src/commands/generate/page/templates/page.tsx.template
+++ b/packages/cli/src/commands/generate/page/templates/page.tsx.template
@@ -1,5 +1,5 @@
 <% if (rscEnabled) { %>
-import { Link } from '@redwoodjs/router/dist/link'
+import { Link } from '@redwoodjs/router/Link'
 import { namedRoutes as routes } from '@redwoodjs/router/namedRoutes'
 import { Metadata } from '@redwoodjs/web/Metadata'
 <% } else { %>
