Update jobs setup template

--- a/packages/cli/src/commands/setup/jobs/templates/jobs.ts.template
+++ b/packages/cli/src/commands/setup/jobs/templates/jobs.ts.template
@@ -3,16 +3,29 @@
 // See https://docs.redwoodjs.com/docs/background-jobs
 
 import { PrismaAdapter, RedwoodJob } from '@redwoodjs/jobs'
+import type { AvailableJobs, WorkerConfig } from '@redwoodjs/jobs'
 
 import { db } from 'src/lib/db'
 import { logger } from 'src/lib/logger'
 
-// Must export `adapter` so that the job runner can use it to look for jobs
-export const adapter = new PrismaAdapter({ db, logger })
+const adapter = new PrismaAdapter({ db, logger })
 
 // Global config for all jobs, can override on a per-job basis
 RedwoodJob.config({ adapter, logger })
 
+// Global config for all workers, can override on a per-worker basis
+// see https://docs.redwoodjs.com/docs/background-jobs#worker-configuration
+export const workerConfig: WorkerConfig = {
+  adapter,
+  logger,
+  maxAttempts: 24,
+  maxRuntime: 14_400, // 4 hours
+  sleepDelay: 5,
+  deleteFailedJobs: false,
+}
+
 // Export instances of all your jobs to make them easy to import and use:
 //   export const jobs = { sample: new SampleJob(), email: new EmailJob() }
-export const jobs = {}
+export const jobs: AvailableJobs = {
+  foo: new TestJob(),
+}
